--- a/mainwebsite/templates/dashboard/view-comment.html
+++ b/mainwebsite/templates/dashboard/view-comment.html
@@ -30,8 +30,8 @@
                                 <small class="d-block text-muted">{{blogs.created}}</small>
                             </div>
                             <div class="ml-auto text-muted">
-                                <a href="{% url 'delete_blog' pk=blogs.id %}" class="icon d-none d-md-inline-block ml-3"><i class="fa fa-trash"></i></a>
-                                <a href="{% url 'update_blog' pk=blogs.id %}" class="icon d-none d-md-inline-block ml-3"><i class="fa fa-pencil"></i></a>
+                                <a href="{% url 'delete_comment' pk=comments.id %}" class="icon d-none d-md-inline-block ml-3"><i class="fa fa-trash"></i></a>
+                                <a href="{% url 'update_comment' pk=comments.id %}" class="icon d-none d-md-inline-block ml-3"><i class="fa fa-pencil"></i></a>
                             </div>
                         </div>
                     </div>
