--- a/mainwebsite/templates/dashboard/delete-comment.html
+++ b/mainwebsite/templates/dashboard/delete-comment.html
@@ -20,7 +20,7 @@
             <a href="{% url 'view_comments' %}"  class="btn btn-danger">Cancel</a>
         </form>
 
-        <div class="row">
+        {% comment %} <div class="row">
             {% for comment in comments %}
             <div class="col-md-12 col-xl-4">
                 <div class="card">
@@ -45,7 +45,7 @@
                     </div>
                 </div>
             </div>
-            {% endfor %}
+            {% endfor %} {% endcomment %}
         </div>
 
     </div>
