--- a/mainwebsite/templates/dashboard/create-comment.html
+++ b/mainwebsite/templates/dashboard/create-comment.html
@@ -25,8 +25,12 @@
 									<div class="card-body">
 										<form method='POST' enctype='multipart/form-data' novalidate>{% csrf_token %}
 										<div class="form-group">
-											<label class="form-label">name</label>
-											{% render_field form.name class="form-control" placeholder="Your Name" %}
+											<label class="form-label">Post</label>
+											{% render_field form.post class="form-control" placeholder="Your Name" %}
+										</div>
+										<div class="form-group">
+										<label class="form-label">name</label>
+										{% render_field form.name class="form-control" placeholder="Your Name" %}
 										</div>
 										<div class="form-group">
 											<label class="form-label">Email</label>
