--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -79,7 +79,7 @@
                                                 {% endfor %}
                                               </div>
                                             </div>
-                                            <div class="col-md-12 card mb-4  mt-3 ">
+                                            {% comment %} <div class="col-md-12 card mb-4  mt-3 ">
                                               <div class="card-body">
                                                 {% if new_comment %}
                                                 <div class="alert alert-success" role="alert">
@@ -104,7 +104,7 @@
                                                 </form>
                                                 {% endfor %}
                                               </div>
-                                            </div>
+                                            </div> {% endcomment %}
                                           </div>
                                         </div>
                                     
