--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -1,6 +1,5 @@
 {% extends "mainwebsite/base/base.html" %}
 {% load static  %}
-{% load widget_tweaks %}
 {% block content %}
 
 
@@ -59,13 +58,23 @@
                                             <div class="clear"></div>
                                             
                                         </div>
-                                        
+                                        <!--Comment-->
                                         <div class="container">
-                                            <div class="col-md-12 card mb-4  mt-3 ">
+                                          <div class="row">
+                                            <div class="col-md-8 card mb-4  mt-3 left  top">
+                                              <div class="card-body">
+                                                <h1>{% block title %} {{ blogs.title }} {% endblock title %}</h1>
+                                                <p class=" text-muted">{{ blogs.author }} | {{ post.created_on }}</p>
+                                                <p class="card-text ">{{ blogs.my_field| safe }}</p>
+                                              </div>
+                                            </div>
+                                            {% comment %} {% block sidebar %} {% include 'sidebar.html' %} {% endblock sidebar %} {% endcomment %}
+
+                                            <div class="col-md-8 card mb-4  mt-3 ">
                                               <div class="card-body">
                                                 <!-- comments -->
-                                                <h5>{{ comments.count }} comments</h5>
-                                        
+                                                <h2>{{ comments.count }} comments</h2>
+
                                                 {% for comment in comments %}
                                                 <div class="comments" style="padding: 10px;">
                                                   <p class="font-weight-bold">
@@ -79,37 +88,115 @@
                                                 {% endfor %}
                                               </div>
                                             </div>
-                                            <div class="col-md-12 card mb-4  mt-3 ">
+                                            <div class="col-md-8 card mb-4  mt-3 ">
                                               <div class="card-body">
-                                                {% comment %} {% if new_comment %}
+                                                {% if new_comment %}
                                                 <div class="alert alert-success" role="alert">
                                                   Your comment is awaiting moderation
                                                 </div>
-                                                {% endif %} {% endcomment %}
-                                                <h5>Leave a comment</h5>
-                                                <form action="{% url 'request:add_blogcomment' request.slug %}" enctype = "multiparty/form-data" method = "post">{% csrf_token %}
-                                                    <div class="form-group">
-                                                        <label class="form-label">Post</label>
-                                                        {% render_field form.post class="form-control" placeholder="Your Name" %}
-                                                      </div>
-                                                    <div class="form-group">
-                                                    <label class="form-label">Name</label>
-                                                    {% render_field form.name class="form-control" placeholder="Your Name" %}
-                                                  </div>
-                                                  <div class="form-group">
-                                                    <label class="form-label">Email</label>
-                                                    {% render_field form.email class="form-control" placeholder="Your Email" %}
-                                                  </div>
-                                                  <div class="form-group">
-                                                    <label class="form-label">Comment</label>
-                                                    {% render_field form.body class="form-control" placeholder="Your Comment" %}
-                                                  </div>
-                                                  <button type="submit" class="btn btn-danger  btn-lg">Post Comment</button>
+                                                {% else %}
+                                                <h3>Leave a comment</h3>
+                                                <form method="post" style="margin-top: 1.3em;">
+                                                  {{ comment_form.as_p }}
+                                                  {% csrf_token %}
+                                                  <button type="submit" class="btn btn-primary  btn-lg">Post Comment</button>
                                                 </form>
+                                                {% endif %}
                                               </div>
                                             </div>
                                           </div>
                                         </div>
+                                        <!--Endcomment-->>
+                                        
+                                        {% comment %} <div class="gdlr-core-pbf-element">
+                                            <div class="comments">
+                                                <h5 class="comment-title py-4">2 Comments</h5>
+                                                <div class="comment d-flex mb-4">
+                                                  <div class="flex-shrink-0">
+                                                    <div class="avatar avatar-sm rounded-circle">
+                                                      <img class="avatar-img" src="assets/img/person-5.jpg" alt="">
+                                                    </div>
+                                                  </div>
+                                                  <div class="flex-grow-1 ms-2 ms-sm-3">
+                                                    <div class="comment-meta d-flex align-items-baseline">
+                                                      <h6 class="me-2">Jordan Singer</h6>
+                                                      <span class="text-muted">2d</span>
+                                                    </div>
+                                                    <div class="comment-body">
+                                                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non minima ipsum at amet doloremque qui magni, placeat deserunt pariatur itaque laudantium impedit aliquam eligendi repellendus excepturi quibusdam nobis esse accusantium.
+                                                    </div>
+                                  
+                                                    <div class="comment-replies bg-light p-3 mt-3 rounded">
+                                                      <h6 class="comment-replies-title mb-4 text-muted text-uppercase">2 replies</h6>
+                                  
+                                                      <div class="reply d-flex mb-4">
+                                                        <div class="flex-shrink-0">
+                                                          <div class="avatar avatar-sm rounded-circle">
+                                                            <img class="avatar-img" src="assets/img/person-4.jpg" alt="">
+                                                          </div>
+                                                        </div>
+                                                        <div class="flex-grow-1 ms-2 ms-sm-3">
+                                                          <div class="reply-meta d-flex align-items-baseline">
+                                                            <h6 class="mb-0 me-2">Brandon Smith</h6>
+                                                            <span class="text-muted">2d</span>
+                                                          </div>
+                                                          <div class="reply-body">
+                                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                                          </div>
+                                                        </div>
+                                                      </div>
+                                                      <div class="reply d-flex">
+                                                        <div class="flex-grow-1 ms-2 ms-sm-3">
+                                                          <div class="reply-meta d-flex align-items-baseline">
+                                                            <h6 class="mb-0 me-2">James Parsons</h6>
+                                                            <span class="text-muted">1d</span>
+                                                          </div>
+                                                          <div class="reply-body">
+                                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio dolore sed eos sapiente, praesentium.
+                                                          </div>
+                                                        </div>
+                                                      </div>
+                                                    </div>
+                                                  </div>
+                                                </div>
+                                                <div class="comment d-flex">
+                                                  <div class="flex-shrink-1 ms-2 ms-sm-3">
+                                                    <div class="comment-meta d-flex">
+                                                      <h6 class="me-2">Santiago Roberts</h6>
+                                                      <span class="text-muted">4d</span>
+                                                    </div>
+                                                    <div class="comment-body">
+                                                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto laborum in corrupti dolorum, quas delectus nobis porro accusantium molestias sequi.
+                                                    </div>
+                                                  </div>
+                                                </div>
+                                              </div>
+                                              <div class="row justify-content-center mt-5">
+
+                                                <div class="col-lg-12">
+                                                  <h5 class="comment-title">Leave a Comment</h5>
+                                                  <div class="row">
+                                                    <div class="col-lg-6 mb-3">
+                                                      <label for="comment-name">Name</label>
+                                                      <input type="text" class="form-control" id="comment-name" placeholder="Enter your name">
+                                                    </div>
+                                                    <div class="col-lg-6 mb-3">
+                                                      <label for="comment-email">Email</label>
+                                                      <input type="text" class="form-control" id="comment-email" placeholder="Enter your email">
+                                                    </div>
+                                                    <div class="col-12 mb-3">
+                                                      <label for="comment-message">Message</label>
+                                  
+                                                      <textarea class="form-control" id="comment-message" placeholder="Enter your comment" cols="30" rows="10"></textarea>
+                                                    </div>
+                                                    <div class="col-12">
+                                                      <input type="submit" class="btn btn-primary" value="Post comment">
+                                                    </div>
+                                                  </div>
+                                                </div>
+                                              </div>
+                                            </div>        
+                                        </div> {% endcomment %}
                                     
                                 </div>
                             </div>
