--- a/mainwebsite/templates/mainwebsite/blog-posts.html
+++ b/mainwebsite/templates/mainwebsite/blog-posts.html
@@ -49,7 +49,7 @@
                                                 data-sync-height="blog-item-1"
                                             >
                                                 <div class="gdlr-core-blog-thumbnail gdlr-core-media-image gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
-                                                    <a href="{% url 'blog_details' pk=blog.id%}">
+                                                    <a href="{% url 'post_detail' slug=blog.slug %}">
                                                         <img src={{blog.image.url}} alt="" width="600" height="600" title="Conference" />
                                                     </a>
                                                 </div>
@@ -60,7 +60,7 @@
                                                         </span>
                                                     </div>
                                                     <h3 class="gdlr-core-blog-title gdlr-core-skin-title" style="font-size: 23px; font-weight: 700; letter-spacing: 0px;">
-                                                        <a href="{% url 'blog_details' pk=blog.id%}">{{blog.title}}</a>
+                                                        <a href="{% url 'post_detail' slug=blog.slug %}">{{blog.title}}</a>
                                                     </h3>
                                                     <div class="gdlr-core-blog-content clearfix">
                                                         {{blog.my_field|truncatechars:150|safe}}
