--- a/mainwebsite/templates/mainwebsite/index.html
+++ b/mainwebsite/templates/mainwebsite/index.html
@@ -617,7 +617,7 @@
                                                         data-sync-height="blog-item-1"
                                                     >
                                                         <div class="gdlr-core-blog-thumbnail gdlr-core-media-image">
-                                                            <a href="{% url 'blog_details' pk=blog.id%}">
+                                                            <a href="{% url 'post_detail' slug=blog.slug %}">
                                                                 <img
                                                                     src="{{blog.image.url}}"
                                                                     alt=""
@@ -637,7 +637,7 @@
                                                                 </span>
                                                             </div>
                                                             <h3 class="gdlr-core-blog-title gdlr-core-skin-title" style="font-size: 22px; font-weight: 500; letter-spacing: 0px;">
-                                                                <a href="{% url 'blog_details' pk=blog.id%}">{{blog.title}}</a>
+                                                                <a href="{% url 'post_detail' slug=blog.slug %}">{{blog.title}}</a>
                                                             </h3>
                                                             <div class="gdlr-core-blog-content clearfix"></div>
                                                             <span class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-author">
