--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -9,7 +9,7 @@
             <div class="gdlr-core-pbf-background-wrap" style="background-color: #383838;">
                 <div
                     class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                    style="opacity: 0.4; background-image: url({{blogs.image.url}}); background-size: cover; background-position: center;"
+                    style="opacity: 0.4; background-image: url({{post.image.url}}); background-size: cover; background-position: center;"
                     data-parallax-speed="0.3"
                 ></div>
             </div>
@@ -19,7 +19,7 @@
                         <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-center-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr">
                             <div class="gdlr-core-title-item-title-wrap">
                                 <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 75px; font-weight: 600; letter-spacing: 0px; text-transform: none; color: #ffffff;">
-                                    {{blogs.title}}<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
+                                    {{post.title}}<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
                                 </h3>
                             </div>
                         </div>
@@ -39,13 +39,13 @@
                                             <div class="gdlr-core-blog-full-head-right">
                                                 <div class="gdlr-core-blog-info-wrapper gdlr-core-skin-divider">
                                                     <span class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-date">
-                                                        <span class="gdlr-core-head"><i class="icon_clock_alt"></i></span><a href="#">{{blogs.created}}</a>
+                                                        <span class="gdlr-core-head"><i class="icon_clock_alt"></i></span><a href="#">{{post.created}}</a>
                                                     </span>
                                                     <span class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-author">
-                                                        <span class="gdlr-core-head">By</span><a href="#" title="Posts by John Smith" rel="author">{{blogs.author}}</a>
+                                                        <span class="gdlr-core-head">By</span><a href="#" title="Posts by John Smith" rel="author">{{post.author}}</a>
                                                     </span>
                                                     <span class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-category">
-                                                        <span class="gdlr-core-head"><i class="icon_folder-alt"></i></span><a href="singleblog.html" rel="tag">{{blogs.category}}</a>
+                                                        <span class="gdlr-core-head"><i class="icon_folder-alt"></i></span><a href="singleblog.html" rel="tag">{{post.category}}</a>
                                                     </span>
                                                     <span class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-comment-number">
                                                         <span class="gdlr-core-head"><i class="icon_comment_alt"></i></span><a href="singleblog.html">0 </a>
@@ -54,7 +54,7 @@
                                             </div>
                                         </div>
                                         <div class="gdlr-core-blog-content clearfix">
-                                            {{blogs.my_field|safe}}
+                                            {{post.my_field|safe}}
                                             <div class="clear"></div>
                                             
                                         </div>
@@ -63,9 +63,9 @@
                                           <div class="row">
                                             <div class="col-md-8 card mb-4  mt-3 left  top">
                                               <div class="card-body">
-                                                <h1>{% block title %} {{ blogs.title }} {% endblock title %}</h1>
-                                                <p class=" text-muted">{{ blogs.author }} | {{ post.created_on }}</p>
-                                                <p class="card-text ">{{ blogs.my_field| safe }}</p>
+                                                <h1>{% block title %} {{ blog.title }} {% endblock title %}</h1>
+                                                <p class=" text-muted">{{ blog.author }} | {{ post.created_on }}</p>
+                                                <p class="card-text ">{{ blog.my_field| safe }}</p>
                                               </div>
                                             </div>
                                             {% comment %} {% block sidebar %} {% include 'sidebar.html' %} {% endblock sidebar %} {% endcomment %}
