--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -1,6 +1,7 @@
 {% extends "mainwebsite/base/base.html" %}
 {% load static  %}
 {% load crispy_forms_tags %}
+{% load widget_tweaks %}
 {% block content %}
 
 
@@ -88,7 +89,12 @@
                                                 {% else %}
                                                 <h5>Leave a comment</h5>
                                                 <form method="post" style="margin-top: 1.3em;">
+                                                  
                                                   {{ comment_form.as_p }}
+                                                  <div class="form-group">
+                                                    <label class="form-label">Post</label>
+                                                    {% render_field comment_form.body class="content" placeholder="Write your comment here..." %}
+                                                  </div>
                                                   {% csrf_token %}
                                                   <button type="submit" class="btn btn-primary  btn-lg">Post Comment</button>
                                                 </form>
