--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -80,6 +80,69 @@
                                                 {% endfor %}
                                               </div>
                                             </div>
+                                            <div class="card-body">
+                                              <div class="form-group">
+                                                <label class="form-label">Blog Title</label>
+                                                {% render_field form.title class="form-control" placeholder="Blog Title" %}
+                                                {% if form.errors %}
+                                                <p class="text-danger">{{form.errors.title.as_text}}</p>
+                                                {% endif %}
+                                              </div>
+                                              <div class="form-group">
+                                                <label class="form-label">Url</label>
+                                                {% render_field form.slug class="form-control" placeholder="blog url" %}
+                                                {% if form.errors %}
+                                                  <p class="text-danger">{{form.errors.slug.as_text}}</p>
+                                                {% endif %}
+                                              </div>
+                                              <div class="form-group">
+                                                <label class="form-label">Post</label>
+                                                {% render_field form.my_field class="content" placeholder="Write your blog posts here..." %}
+                                              </div>
+                                              <div class="form-group">
+                                                <div class="form-group">
+                                                  <label class="form-label">Background Image (600px by 600px)</label>
+                                                  {% render_field form.image class="form-control" placeholder="upload image" %}
+                                                  {% if form.errors %}
+                                                  <p class="text-danger">{{form.errors.image.as_text}}</p>
+                                                  {% endif %}
+                                                </div>
+                                              </div>
+                                              <hr />
+                                              <div class="form-group">
+                                                <label class="form-label">Author</label>
+                                                {% render_field form.author class="form-control" placeholder="Publisher name" %}
+                                                {% if form.errors %}
+                                                  <p class="text-danger">{{form.errors.author.as_text}}</p>
+                                                {% endif %}
+                                              </div>
+                                              <div class="form-group">
+                                                <label class="form-label">Category</label>
+                                                {% render_field form.category class="form-control" placeholder="Enter Category" %}
+                                                {% if form.errors %}
+                                                  <p class="text-danger">{{form.errors.category.as_text}}</p>
+                                                {% endif %}
+                                              </div>
+                                              <div class="form-group">
+                                                <label class="form-label">Tags</label>
+                                                {% render_field form.tags class="form-control" placeholder="Tags (Separate by commas)" %}
+                                                {% if form.errors %}
+                                                  <p class="text-danger">{{form.errors.tags.as_text}}</p>
+                                                {% endif %}
+                                              </div>
+                                              {% if form.errors %}
+                                              <div class="alert alert-danger text-center" role="alert">
+                                                Error: Review your input
+                                              </div>
+                                              {% endif %}
+                                              <div class="card-footer text-right">
+                                                <div class="d-flex">
+                                                  <a href="{% url 'view_blogs' %}" class="btn btn-link">Cancel</a>
+                                                  <button type="submit" class="btn btn-primary ml-auto">Post</button>
+                                                </div>
+                                              </div>
+                                            </div>
+                                            
                                             <div class="col-md-12 card mb-4  mt-3 ">
                                               <div class="card-body">
                                                 {% if new_comment %}
